@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '25.0.3'
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.dev.victor.spaper"
-        minSdkVersion 14
-        targetSdkVersion 28
-        versionCode 16
+        minSdk 21
+        targetSdk 33
+        versionCode 17
         versionName "2.1.4"
         renderscriptTargetApi 20
         renderscriptSupportModeEnabled true
@@ -25,12 +24,21 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.dev.victor.spaper'
 }
 
 repositories {
 
     maven { url "https://jitpack.io" }
 
+}
+
+tasks.withType(JavaCompile).configureEach{
+    options.fork = true
+    options.forkOptions.jvmArgs +=[
+            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
 }
 
 
@@ -43,23 +51,26 @@ dependencies {
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'de.hdodenhof:circleimageview:1.3.0'
 
+/*
     implementation 'com.github.ParkSangGwon:TedPermission:v1.0.6'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+*/
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.pnikosis:materialish-progress:1.5'
     implementation 'com.makeramen:roundedimageview:2.2.0'
-    implementation 'jp.wasabeef:recyclerview-animators:2.2.3'
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+    implementation group: 'jp.wasabeef', name: 'blurry', version: '4.0.0'
     implementation 'com.gordonwong:material-sheet-fab:1.0.4'
-    implementation 'jp.wasabeef:blurry:2.0.0'
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.volley:volley:1.2.1'
 
     implementation 'com.balysv:material-ripple:1.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
